<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Name Your Price</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="product_image_content_description">Product Image</string>
    <string name="online">online</string>
    <string name="or">or</string>
    <string name="noDataFound">Sorry, there was no data found for this item.</string>
    <string name="reg">Reg:</string>
    <string name="add_to_list">add to list</string>
    <string name="add_to_cart">add to cart</string>
    <string name="name_your_price">Name Your Price</string>
    <string name="your_price">Your Price</string>
    <string name="enter_a_price">Enter a Price</string>
    <string name="submit_price">Submit Price</string>
    <string name="enter_new_price">Enter a price greater than $1</string>
    <string name="action_about">About</string>
    <string name="version">Eric Rooney\nVersion:</string>
    <string name="found_deal">#NameYourPrice</string>
</resources>
