<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/light_gray"
    >


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dp"
            android:contentDescription="@string/your_price"
            android:text="@string/your_price"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dp"
            android:contentDescription="$"
            android:text="$"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/price"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:hint="@string/enter_a_price"
            android:maxLength="12"
            android:gravity="right|center_vertical"/>
    </LinearLayout>


    <FrameLayout
        android:id="@+id/submit_price"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/azure"
        android:contentDescription="@string/submit_price"
        android:textSize="18sp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_price"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_gravity="center"/>

    </FrameLayout>

</LinearLayout>