<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DealDetailFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:id="@+id/deal_list_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingBottom="58dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">


            <ImageView
                android:id="@+id/deal_detail_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/fragment_vertical_margin"
                android:layout_marginBottom="@dimen/fragment_vertical_margin"
                android:contentDescription="@string/product_image_content_description" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/fragment_vertical_margin"
                >


                <TextView
                    android:id="@+id/deal_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:contentDescription="price"
                    android:textColor="@color/azure"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/deal_price_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="3dp"
                        android:contentDescription="reg"
                        android:text="@string/reg"
                        android:textColor="@color/light_gray"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/deal_price_old"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="price"
                        android:textColor="@color/light_gray"
                        android:textSize="20sp" />
                </LinearLayout>
            </RelativeLayout>

            <TextView
                android:id="@+id/deal_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fragment_vertical_margin"
                android:contentDescription="title"
                android:fontFamily="sans-serif-light"
                android:maxLines="3"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/deal_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fragment_vertical_margin"
                android:contentDescription="title"
                android:textSize="16sp" />


        </LinearLayout>


    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">


        <FrameLayout
            android:id="@+id/add_to_list"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:background="@color/light_gray"
            android:contentDescription="@string/add_to_list"
            android:textSize="18sp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="3dp"
                android:text="@string/add_to_list"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_gravity="center"/>

        </FrameLayout>


        <FrameLayout
            android:id="@+id/add_to_cart"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:background="@color/azure"
            android:contentDescription="@string/add_to_cart"
            android:textSize="18sp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_to_cart"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_gravity="center"/>

        </FrameLayout>
    </LinearLayout>

    <ImageView android:id="@+id/fullview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="gone"
        android:layout_centerInParent="true"/>

</RelativeLayout>
