<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/deal_list_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:background="@color/white"
    android:orientation="horizontal"
    android:padding="0dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/deal_list_item_image_view"
            android:layout_width="@dimen/deal_list_item_image_size"
            android:layout_height="@dimen/deal_list_item_image_size"
            android:contentDescription="@string/product_image_content_description"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight=".5">
            <TextView
                android:id="@+id/deal_list_item_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:contentDescription="title"
                android:layout_centerInParent="true"
                android:fontFamily="sans-serif-light"
            android:maxLines="2"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray"></LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight=".5">
            <TextView
                android:id="@+id/deal_list_item_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:contentDescription="price"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:fontFamily="sans-serif"/>
            <TextView
                android:id="@+id/deal_list_item_ship"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:contentDescription="@string/online"
                android:text="@string/online"
                android:layout_toLeftOf="@+id/deal_list_item_or"
                android:layout_centerVertical="true"/>
            <TextView
                android:id="@+id/deal_list_item_or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:contentDescription="@string/or"
                android:text="@string/or"
                android:layout_toLeftOf="@+id/deal_list_item_circle"
                android:layout_marginLeft="5dp"
                android:textColor="@color/light_gray"
                android:layout_centerVertical="true"/>
        <FrameLayout
            android:id="@+id/deal_list_item_circle"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="5dp"
            android:layout_centerVertical="true"
            android:background="@drawable/shape_circle_gray"
            >
            <TextView
                android:id="@+id/deal_list_item_aisle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="Product Aisle"
                android:layout_gravity="center"
                android:textColor="@color/azure"
                android:textStyle="bold"
                />
            </FrameLayout>

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
